--- a/css/styles.css
+++ b/css/styles.css
@@ -573,7 +573,9 @@ img {
     margin-bottom: 16px;
 }
 
-.input-btn {
+.container-form-sub {}
+
+.form-sub {
     display: flex;
     align-items: baseline;
     gap: 24px;
@@ -584,13 +586,14 @@ img {
     border-radius: 4px;
     width: 264px;
     height: 40px;
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-    padding: 8px 16px 8px 16px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    padding-left: 16px;
     font-size: 12px;
     line-height: 2;
     letter-spacing: 0.04em;
     color: #fff;
     background-color: #2e2f42;
+    background-color: transparent;
 }
 
 .btn-sub {
@@ -601,7 +604,7 @@ img {
     gap: 16px;
     border-radius: 4px;
     padding: 8px 24px;
-    width: 165px;
+    min-width: 165px;
     height: 40px;
     background-color: #4d5ae5;
     border: none;
@@ -624,6 +627,8 @@ img {
 
 .icons-sub {
     fill: #fff;
+    margin-left: 16px;
+
 }
 
 
@@ -682,31 +687,36 @@ img {
     justify-content: center;
     width: 24px;
     height: 24px;
-    border-radius: 100%;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
     border: none;
+    padding: 0;
+    cursor: pointer;
     stroke-width: 1px;
     stroke: rgba(0, 0, 0, 0.1);
     position: absolute;
     top: 24px;
     right: 24px;
     background-color: #e7e9fc;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
-
-
 
 .icons-btn {
     width: 8px;
     height: 8px;
     fill: #2e2f42;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.icons-btn:focus,
+.icons-btn:hover {
+    fill: #ffffff;
+}
 
 .close-btn:focus,
 .close-btn:hover {
     background-color: #404bbf;
-    fill: #fff;
-
 }
 
 
@@ -728,16 +738,16 @@ img {
 
 
 .modal-field {
-    margin-bottom: 8px;
+    margin-bottom: 16px
 }
 
 
 .modal-label {
+    line-height: 1.17;
     font-size: 12px;
-    line-height: 1.16667;
     letter-spacing: 0.04em;
-    color: rgba(46, 47, 66, 0.4);
-
+    color: #8e8f99;
+    display: block;
     display: inline-block;
     margin-bottom: 4px;
 }
@@ -758,13 +768,18 @@ img {
     padding-right: 16px;
     font-family: "Roboto", sans-serif;
     font-weight: 700;
-    font-size: 16px;
+    font-size: 12px;
     letter-spacing: 0.04em;
     text-transform: uppercase;
     color: #2e2f42;
     outline: transparent;
+    background-color: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.modal-input:focus {
+    border-color: #4D5AE5;
+}
 
 .modal-input:focus {}
 
@@ -780,6 +795,7 @@ img {
     left: 16px;
     top: 50%;
     transform: translateY(-50%);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -794,12 +810,16 @@ img {
     padding-right: 16px;
     padding-bottom: 8px;
     font-size: 12px;
-    line-height: 1.16667;
+    line-height: 1.17;
     letter-spacing: 0.04em;
     color: rgba(46, 47, 66, 0.4);
     outline: transparent;
     resize: none;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
+.modal-comment:focus {
+    border-color: #4D5AE5;
 }
 
 .consent-box {
@@ -812,7 +832,7 @@ img {
 
 .text-consent {
     font-size: 12px;
-    line-height: 1.16667;
+    line-height: 1.17;
     letter-spacing: 0.04em;
     color: #8e8f99;
     display: flex;
@@ -826,10 +846,11 @@ img {
     border-radius: 2px;
     border: 1px solid rgba(46, 47, 66, 0.4);
     margin-right: 8px;
-    display: flex;
+    display: inline-flex;
     align-items: center;
     justify-content: center;
     fill: transparent;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -850,10 +871,12 @@ img {
 
 
 .send-btn {
+    font-family: "Roboto", sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.04em;
+    text-align: center;
     cursor: pointer;
     color: #fff;
     background-color: #4D5AE5;
