--- a/css/styles.css
+++ b/css/styles.css
@@ -573,7 +573,6 @@ img {
     margin-bottom: 16px;
 }
 
-.container-form-sub {}
 
 .form-sub {
     display: flex;
@@ -689,7 +688,6 @@ img {
     height: 24px;
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 50%;
-    border: none;
     padding: 0;
     cursor: pointer;
     stroke-width: 1px;
@@ -717,6 +715,7 @@ img {
 .close-btn:focus,
 .close-btn:hover {
     background-color: #404bbf;
+    border: none;
 }
 
 
@@ -738,17 +737,16 @@ img {
 
 
 .modal-field {
-    margin-bottom: 16px
+    margin-bottom: 8px;
 }
 
 
 .modal-label {
+    display: block;
     line-height: 1.17;
     font-size: 12px;
     letter-spacing: 0.04em;
     color: #8e8f99;
-    display: block;
-    display: inline-block;
     margin-bottom: 4px;
 }
 
@@ -841,14 +839,14 @@ img {
 
 
 .modal-check {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
     width: 16px;
     height: 16px;
     border-radius: 2px;
     border: 1px solid rgba(46, 47, 66, 0.4);
     margin-right: 8px;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
     fill: transparent;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
