--- a/css/styles.css
+++ b/css/styles.css
@@ -560,6 +560,7 @@ img {
 .footer-sub {
     width: 453px;
     height: 80px;
+
 }
 
 
@@ -576,9 +577,11 @@ img {
 
 .form-sub {
     display: flex;
-    align-items: baseline;
     gap: 24px;
+
 }
+
+.label-sub {}
 
 .input-sub {
     border: 1px solid #fff;
@@ -599,8 +602,7 @@ img {
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: row;
-    gap: 16px;
+
     border-radius: 4px;
     padding: 8px 24px;
     min-width: 165px;
@@ -707,10 +709,13 @@ img {
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.icons-btn:focus,
-.icons-btn:hover {
+
+.close-btn:hover .icons-btn,
+.close-btn:focus .icons-btn {
     fill: #ffffff;
 }
+
+
 
 .close-btn:focus,
 .close-btn:hover {
@@ -796,6 +801,9 @@ img {
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.field-comment {
+    margin-bottom: 16px;
+}
 
 .modal-comment {
     width: 100%;
